--- a/main.css
+++ b/main.css
@@ -1,11 +1,6 @@
 .wrapper {
-  width: 80%;
+  width: 75%;
   margin: 0 auto;
-  display: flex;
-}
-
-#viewport {
-    background-color: lightgray;
 }
 
 p, h1, h2, h3, h4, h5, h6, ul {
@@ -17,11 +12,20 @@ h3 {
   font-size: 16px;
 }
 
-#body {
-  flex: 3;
+.page {
   padding: 30px;
   border: 5px solid black;
   background-color: white;
+  float: left;
+}
+
+.page-wrapper {
+  width: 75%;
+  float: left;
+}
+
+#job-description {
+  margin-top: 15px;
 }
 
 /*RESUME STYLING*/
@@ -63,12 +67,14 @@ section p, section h3 {
   float: right;
 }
 
+.space-bottom {
+  padding-bottom: 15px;
+}
+
 /*COMMENTS STYLING*/
 #comments {
-  display: block;
-  flex: 1;
   padding: 7px;
-  height: 100%;
+  width: 22%;
   float: right;
 }
 
